--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <span class="side-btn" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-        <a class="navbar-brand pb-2" href="index.html"> <img src="{% static 'images/all-img/logo.png' %}" alt="logo_img"> </a>
+        <a class="navbar-brand pb-2" href="{% url 'home' %}"> <img src="{% static 'images/all-img/logo.png' %}" alt="logo_img"> </a>
     </div>
 </div>
 <!-- mobile-sidemenu -->
@@ -70,7 +70,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-sm offcanvas-desktop">
             <div class="col-md-3 ">
-                <a class="navbar-brand pb-2" href="index-3.html"> <img src="{% static 'images/all-img/logo.png' %}" alt="logo_img"> </a>
+                <a class="navbar-brand pb-2" href="{% url 'home' %}"> <img src="{% static 'images/all-img/logo.png' %}" alt="logo_img"> </a>
             </div>
             <div class="col-md-9 collapse navbar-collapse">
                 <ul class="navbar-nav">
@@ -99,7 +99,7 @@
              data-anim-delay="400">
             <div class="row">
                 <div class="widgets-col">
-                    <a class="navbar-brand pb-2" "> <img src="{% static 'images/all-img/logo.png' %}" alt="logo_img"
+                    <a class="navbar-brand pb-2"> <img src="{% static 'images/all-img/logo.png' %}" alt="logo_img"
                                                                          class="img-fluid"> </a>
                     <p> Clipper Logistics PTE. LTD, consectetur adipiscing elit, sed do eiusmod tempor illo inventore
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor illo
