--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -16,6 +16,21 @@
     <link rel="stylesheet" href="{% static 'css/reponsive.css' %}">
 {% endblock %}
 
+{% block nav-mobile %}
+    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}#about ">About Us</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}#services ">Services</a></li>
+
+    <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact Us</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}#quote ">Request a Free Quote</a></li>
+{% endblock %}
+
+{% block nav-desktop %}
+    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}#about ">About Us</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}#services ">Services</a></li>
+
+    <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact Us</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}#quote ">Request a Free Quote</a></li>
+{% endblock %}
 
 {% block content %}
 
@@ -26,7 +41,7 @@
             <h1><span> CONTACT</span></h1>
             <p class="title-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porta, dui at suscipit
                 aliquam, massa ex accumsan augue, in vehicula nulla justo id lacus. </p>
-            <a href="#" class="send-btn">GET FREE QUOTE <i class="fas fa-angle-double-right"></i></a>
+            <a href="{% url 'home' %}#quote" class="send-btn">GET FREE QUOTE <i class="fas fa-angle-double-right"></i></a>
         </div>
     </div>
 </div>
