--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -39,8 +39,8 @@
     <div class="container page-title content-center">
         <div class="section-heading white animate " data-anim-type="zoomIn" data-anim-delay="600">
             <h1><span> CONTACT</span></h1>
-            <p class="title-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porta, dui at suscipit
-                aliquam, massa ex accumsan augue, in vehicula nulla justo id lacus. </p>
+            <p class="title-desc">Have some special requirements or need a custom package custom made for you or your
+                organization? Get in touch with us</p>
             <a href="{% url 'home' %}#quote" class="send-btn">GET FREE QUOTE <i class="fas fa-angle-double-right"></i></a>
         </div>
     </div>
@@ -67,9 +67,7 @@
             </div>
             <div class="col-lg-7 col-md-12 cont-desc">
                 <p class="title-desc"><b>If you have any questions, Please send your message</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec sagittis nisi. Duis rhoncus
-                    imperdiet tortor eu sodales Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec
-                    sagittis nisi. Duis rhoncus imperdiet tortor eu sodales</p>
+                <p>Feel free to ask the experts any questions you may have.</p>
 {#                <div class="row other-cont-area bg-color">#}
 {#                    <div class="icon_col">#}
 {#                        <span><i class="fas fa-mobile-alt icon"></i></span>#}
